# VirtualJukebox

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  check_currentvote.sh  jukebox_config.ini  travis.sh
cmake/: ClangFormat.cmake  GoogleTest.cmake  LibHttpServer.cmake  LibMicroHttpd.cmake  LibRestClient-cpp.cmake
docs/: NetworkListener_8h_source.html  annotated.html  classNetworkListener-members.html  classNetworkListener.html  classNetworkListenerError-members.html  classNetworkListenerError.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  index.html
docs/html/: ConfigHandler_8cpp.html  ConfigHandler_8h.html  ConfigHandler_8h_source.html  DataStore_8h.html  DataStore_8h_source.html  GlobalTypes_8h.html  GlobalTypes_8h_source.html  JukeBox_8cpp.html  JukeBox_8h.html  JukeBox_8h_source.html  LoggingHandler_8cpp.html  LoggingHandler_8h.html  LoggingHandler_8h_source.html  MusicBackend_8h.html  MusicBackend_8h_source.html  NetworkAPI_8cpp.html  NetworkAPI_8h.html  NetworkAPI_8h_source.html  NetworkListener_8h.html  NetworkListener_8h_source.html  PlaybackTrack_8h_source.html  Queue_8cpp.html  Queue_8h.html  Queue_8h_source.html  RAMDataStore_8h.html  RAMDataStore_8h_source.html  RequestInformation_8h.html  RequestInformation_8h_source.html  RestAPI_8cpp.html  RestAPI_8h.html  RestAPI_8h_source.html  RestEndpointHandler_8cpp.html  RestEndpointHandler_8h.html  RestEndpointHandler_8h_source.html  RestEndpointHandlers_8cpp.html  RestEndpointHandlers_8h.html  RestEndpointHandlers_8h_source.html  RestRequestHandler_8cpp.html  RestRequestHandler_8h.html  RestRequestHandler_8h_source.html  (+127 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  files_0.js  files_1.js  files_2.js  files_3.js  (+26 more)
docs/images/: class_diagram.uxf
docs/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  searchdata.js
docs/src/: ClassDiagram.md  RESTInterface.md  main.md
examples/: CMakeLists.txt  DummyData.h  empty_network_listener.cpp  hello_libhttpserver.cpp  simple_spotifyClientServer.cpp
scripts/: check_cache.sh  clang_format.sh  create_cache.sh  install_libglog.sh  install_libhttpserver.sh  install_libmicrohttpd.sh  install_librestclient-cpp.sh  travis.sh
src/: ConfigHandler.cpp  ConfigHandler.h  DataStore.h  GlobalTypes.h  JukeBox.cpp  JukeBox.h  LoggingHandler.cpp  LoggingHandler.h  LoggingProvider.cpp  LoggingProvider.h  MusicBackend.h  NetworkAPI.cpp  NetworkAPI.h  NetworkListener.h  Playback.cpp  Playback.h  PlaybackTrack.cpp  PlaybackTrack.h  Queue.cpp  Queue.h  RAMDataStore.cpp  RAMDataStore.h  RestAPI.cpp  RestAPI.h  RestEndpointHandler.cpp  RestEndpointHandler.h  RestEndpointHandlers.cpp  RestEndpointHandlers.h  RestRequestHandler.cpp  RestRequestHandler.h  Result.cpp  Result.h  Serializer.h  SpotifyBackend.cpp  SpotifyBackend.h  Track.cpp  Track.h  User.h  jukebox.cpp  jukebox.h  (+1 more)
src/Datastore/: DataStore.h  RAMDataStore.cpp  RAMDataStore.h
src/Network/: NetworkAPI.cpp  NetworkAPI.h  RequestInformation.h  RestAPI.cpp  RestAPI.h  RestEndpointHandlers.cpp  RestEndpointHandlers.h  RestRequestHandler.cpp  RestRequestHandler.h
src/SimpleIni/: README.md
src/Spotify/: SpotifyAPI.cpp  SpotifyAPI.h  SpotifyAPITypes.cpp  SpotifyAPITypes.h  SpotifyAuthorization.cpp  SpotifyAuthorization.h  SpotifyBackend.cpp  SpotifyBackend.h
src/SpotifyApi/: SpotifyAPI.cpp  SpotifyAPI.h  SpotifyAPITypes.cpp  SpotifyAPITypes.h  SpotifyAuthorization.cpp  SpotifyAuthorization.h
src/Types/: GlobalTypes.h  Queue.cpp  Queue.h  Result.cpp  Result.h  Tracks.cpp  Tracks.h  User.cpp  User.h
src/Utils/: ConfigHandler.cpp  ConfigHandler.h  LoggingHandler.cpp  LoggingHandler.h  Serializer.cpp  Serializer.h  SimpleScheduler.cpp  SimpleScheduler.h  TrackScheduler.cpp  TrackScheduler.h
test/: RestAPIFixture.cpp  RestAPIFixture.h  SpotifyAPITest.cpp  Test_ConfigHandler.cpp  Test_DataStore.cpp  Test_JukeBox.cpp  Test_RestAPI.cpp  Test_SpotifyAPI.cpp  Test_TrackScheduler.cpp  helloworld.cpp  test_config.ini
test/fixtures/: RestAPIFixture.cpp  RestAPIFixture.h
test/helpers/: NetworkListenerHelper.cpp  NetworkListenerHelper.h  TrackGenerator.cpp  TrackGenerator.h
test/mocks/: MockNetworkListener.cpp  MockNetworkListener.h
test/scripts/: check_currentvote.sh
